--- a/Mancala4Telegram/Web.config
+++ b/Mancala4Telegram/Web.config
@@ -94,6 +94,17 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="messages"
+          type="System.Diagnostics.XmlWriterTraceListener"
+          initializeData="c:\logs\messages.svclog" />
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
   <system.serviceModel>
     <services>
       <service name="Mancala4Telegram.MancalaService">
@@ -120,6 +131,16 @@
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+
+    <diagnostics>
+      <messageLogging
+           logEntireMessage="true"
+           logMalformedMessages="false"
+           logMessagesAtServiceLevel="true"
+           logMessagesAtTransportLevel="false"
+           maxMessagesToLog="3000"
+           maxSizeOfMessageToLog="2000"/>
+    </diagnostics>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -153,6 +174,12 @@
     </assemblyBinding>
 
   </runtime>
- 
 
+  <system.net>
+    <defaultProxy enabled="true">
+      <proxy proxyaddress="http://127.0.0.1:8888" bypassonlocal="False" />
+    </defaultProxy>
+  </system.net>
+  
+  
 </configuration>
