--- a/Mancala4Telegram/Mancala4Telegram.csproj
+++ b/Mancala4Telegram/Mancala4Telegram.csproj
@@ -127,7 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MancalaService.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MancalaService.svc.cs">
@@ -135,7 +137,7 @@
     </Compile>
     <Compile Include="IMancalaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Update.cs" />
+    <Compile Include="Model\Update.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
